# orbital-fork

./: package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
docs/weydra-renderer/: platform-guards.md
meu-jogo/: ROADMAP.md  index.html  index.js  package-lock.json  package.json
meu-jogo/entidades/: cachorro.js  jogador.js
meu-jogo/player/: player.js
meu-jogo/src/: main.js  main.ts  types.ts
meu-jogo/terreno/: terreno.js
meu-jogo/world/: mundo.js
src/: main.ts  types.ts  weydra-loader.ts
src/audio/: musica-ambiente.ts
src/core/: benchmark.ts  config.ts  graphics-preset.ts  player.ts  profiling-instr.ts  render-order.ts  ui-mode.ts
src/shaders/: fog.wgsl  planeta-weydra.wgsl  planeta.frag  planeta.wgsl  starfield-weydra.wgsl  starfield.frag  starfield.wgsl
src/ui/: animations.css.ts  bottom-sheet.css.ts  build-panel.ts  colonizer-panel.ts  colony-modal.ts  confirmar-acao.ts  credits-bar.ts  debug-menu.ts  empire-modal.ts  fila-dnd.ts  hud-layout.ts  loading-screen.ts  lore-modal.ts  main-menu.ts  minimap.ts  mobile-menu-btn.ts  mobile-nav-sheet.ts  mobile.css.ts  new-world-modal.ts  pause-menu.ts  planet-details-modal.ts  planet-drawer.ts  planet-modal.ts  planet-panel.ts  renderer-info-modal.ts  resource-bar.ts  save-modal.ts  (+5 more)
weydra-renderer/: .gitignore  Cargo.toml  rust-toolchain.toml
weydra-renderer/adapters/ios/: Cargo.toml
weydra-renderer/adapters/ios/src/: lib.rs
weydra-renderer/adapters/native/: Cargo.toml
weydra-renderer/adapters/native/src/: lib.rs
weydra-renderer/adapters/wasm/: Cargo.toml
weydra-renderer/adapters/wasm/src/: lib.rs
(+102 files in other folders)
