[package]
name = "weydra-renderer-ios"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
weydra-renderer = { path = "../../core" }
wgpu = { version = "29", default-features = false }
log = { workspace = true }
