[package]
name = "weydra-renderer-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
weydra-renderer = { path = "../../core" }
wgpu = { workspace = true, features = ["webgpu", "webgl"] }
bytemuck = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
console_error_panic_hook = { workspace = true }
log = { workspace = true }
raw-window-handle = { version = "0.6", default-features = false }

[dependencies.web-sys]
workspace = true
features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
]
